<resources>
    <string name="app_name" translatable="false">Unchained</string>
    <string name="google" translatable="false">Google</string>
    <string name="cloudflare" translatable="false">Cloudflare</string>
    <string name="quad9" translatable="false">Quad9</string>
    <string name="mullvad" translatable="false">Mullvad</string>
    <string name="percent_format" translatable="false">%1$.1f%%</string>
    <string name="loading_auth_link">Loading Authentication…</string>
    <string name="please_visit">Please visit\u0020</string>
    <string name="link">Link</string>
    <string name="using_code">using the code</string>
    <string name="copy_code">Copy code</string>
    <string name="code_copied">Code copied to clipboard</string>
    <string name="or_visit">Or directly visit</string>
    <string name="waiting_user_auth">Waiting user authorization</string>
    <string name="obtained_user_auth">Obtained user authorization</string>
    <string name="waiting_secret">Waiting Secret</string>
    <string name="waiting_token">Waiting token confirmation</string>
    <string name="login_qr_code_description">Scan the QR code with your phone to log in</string>
    <string name="show_login_qr_code">Show QR code to log in from your phone</string>
    <string name="token_web_received">Token received, continue on your TV</string>
    <string name="token_web_pin_label">PIN shown on the TV</string>
    <string name="token_web_get_token_link">Get your private token here</string>
    <string name="send">Send</string>
    <string name="link_web_received">Link received, continue on your TV</string>
    <string name="link_qr_code_description">Scan the QR code with your phone to send a link</string>
    <string name="token_web_wrong_pin">Wrong PIN, check your TV</string>
    <string name="token_server_pin_format" translatable="false">PIN: %1$s</string>
    <string name="type_from_phone">Type from your phone</string>
    <string name="send_value_from_phone_format">Send this from your phone by opening %s</string>
    <string name="value_web_received">Received, continue on your TV</string>
    <string name="phone_input_qr_code_description">Scan the QR code with your phone to fill this field</string>
    <string name="phone_input_invalid">Invalid value, check your TV</string>
    <string name="phone_input_unavailable">Could not start the phone input server</string>
    <string name="obtained_token">Obtained token</string>
    <string name="waiting_link">Loading authorization link</string>
    <string name="link_loaded">Authorization link loaded</string>
    <string name="premium">Premium</string>
    <string name="not_premium">Not Premium</string>
    <string name="premium_points_format">Premium Points: %1$d/1000</string>
    <string name="premium_days_format">Remaining days: %1$d</string>
    <string name="user">User</string>
    <string name="new_download">New Download</string>
    <string name="scroll_to_top">Scroll to the top</string>
    <string name="remote_traffic">Remote Traffic</string>
    <string name="password_optional">Password [Optional]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unrestrict">Unrestrict</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="loading">Loading</string>
    <string name="copy_string">Copy</string>
    <string name="open_link">Open Link</string>
    <string name="copy_link">Copy Link</string>
    <string name="link_copied">Link copied</string>
    <string name="links_copied">Links copied</string>
    <string name="streaming">Streaming</string>
    <string name="megabytes_short">MB</string>
    <string name="file_size_format">%1$d MB</string>
    <string name="file_size_format_kb">%1$.2f KB</string>
    <string name="file_size_format_mb">%1$.2f MB</string>
    <string name="file_size_format_gb">%1$.2f GB</string>
    <string name="selected_file_size_format">%1$d MB / %2$d MB selected</string>
    <string name="size_error">Error getting the file size</string>
    <string name="torrent_status_format">Status: %1$s</string>
    <string name="speed_format_b">%1$d b/s</string>
    <string name="speed_format_kb">%1$.1f KB/s</string>
    <string name="speed_format_mb">%1$.1f MB/s</string>
    <string name="speed_error">Error getting the download speed</string>
    <string name="load_streams">Load streams</string>
    <string name="apple" translatable="false">Apple</string>
    <string name="dash" translatable="false">Dash</string>
    <string name="liveMP4" translatable="false">Live MP4</string>
    <string name="h264_webm" translatable="false">H264 WebM</string>
    <string name="quality">Quality</string>
    <string name="links">Links</string>
    <string name="add_private_token_message">You can also use your private API token from https://real-debrid.com/apitoken, which will allow you to utilize every functionality, such as streaming.</string>
    <string name="add_private_token">Add Private Token</string>
    <string name="save">Save</string>
    <string name="private_token">Private Token</string>
    <string name="invalid_token">Please check the token value</string>
    <string name="download_details">Download Details</string>
    <string name="authenticate">Authenticate</string>
    <string name="upload_torrent">Upload Torrent</string>
    <string name="error_loading_torrent">No torrent loaded</string>
    <string name="link_or_magnet">Link or Magnet</string>
    <string name="status">Status</string>
    <string name="magnet_error">Magnet Error</string>
    <string name="magnet_conversion">Magnet Conversion</string>
    <string name="waiting_files_selection">Waiting Files Selection</string>
    <string name="queued">Queued</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="error">Error</string>
    <string name="virus">Virus</string>
    <string name="compressing">Compressing</string>
    <string name="uploading">Uploading</string>
    <string name="dead">Dead</string>
    <string name="download">Download</string>
    <string name="lists">Lists</string>
    <string name="torrent">Torrent</string>
    <string name="user_avatar">User Avatar</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="paste">Paste</string>
    <string name="streamable">Streamable</string>
    <string name="open_stream">Open stream</string>
    <string name="upload_torrent_description">Upload a .torrent file from your local memory</string>
    <string name="upload_file_description">Upload a .torrent file or a RSDF, CCF, CCF3, DLC container from your phone</string>
    <string name="details">Details</string>
    <string name="file_id_format">ID: %1$s</string>
    <string name="file_type_format">Type: %1$s</string>
    <string name="rd_settings_link_description">Manage your user settings, premium state, and convert points from your account page.</string>
    <string name="settings">Settings</string>
    <string name="content_description_settings">Settings for the application</string>
    <string name="about">About</string>
    <string name="content_description_about">Details about the app</string>
    <string name="error_unrestricting_download">Error while un-restricting the download</string>
    <string name="internal_error">Internal error</string>
    <string name="bad_parameter_value">Bad parameter value</string>
    <string name="missing_parameter">Missing parameter</string>
    <string name="unknown_method">Unknown method</string>
    <string name="method_not_allowed">Method not allowed</string>
    <string name="slow_down">Slow down</string>
    <string name="resource_unreachable">Resource unreachable</string>
    <string name="resource_not_found">Resource not found</string>
    <string name="bad_token">Bad token</string>
    <string name="permission_denied">Permission denied</string>
    <string name="tfa_needed">Two-Factor authentication needed</string>
    <string name="tfa_pending">Two-Factor authentication pending</string>
    <string name="invalid_login">Invalid login</string>
    <string name="invalid_password">Invalid password</string>
    <string name="account_locked">Account locked</string>
    <string name="account_not_activated">Account not activated</string>
    <string name="unsupported_hoster">Unsupported hoster</string>
    <string name="hoster_in_maintenance">Hoster in maintenance</string>
    <string name="hoster_limit_reached">Hoster limit reached</string>
    <string name="hoster_temporarily_unavailable">Hoster temporarily unavailable</string>
    <string name="hoster_not_available_for_free_users">Hoster not available for free users</string>
    <string name="too_many_active_downloads">Too many active downloads</string>
    <string name="ip_Address_not_allowed">IP Address not allowed</string>
    <string name="traffic_exhausted">Traffic exhausted</string>
    <string name="file_unavailable">File unavailable</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="upload_too_big">Upload too big</string>
    <string name="upload_error">Upload error</string>
    <string name="file_not_allowed">File not allowed</string>
    <string name="torrent_too_big">Torrent too big</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="feedback_title">Send feedback</string>
    <string name="credits_title">Credits</string>
    <string name="license_title">License</string>
    <string name="license_gpl" translatable="false">GPL-3.0</string>
    <string name="terms_title">Terms of use</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="title_theme_preference">Theme</string>
    <string name="title_various">Various</string>
    <string name="night_theme">Night mode</string>
    <string name="title_aspect">Aspect</string>
    <string name="delete">Delete</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="title_debugging">Debug</string>
    <string name="update_regexps">Update hosts link matcher</string>
    <string name="notifications">Notifications</string>
    <string name="enable_torrent_monitoring_title">Enable torrent monitoring</string>
    <string name="content_description_search">Filter the lists</string>
    <string name="search">Search</string>
    <string name="referral">Referral</string>
    <string name="referral_summary">Use a referral when clicking on the account page button</string>
    <string name="files_list">Files List</string>
    <string name="error_loading_folder">Some links couldn\'t be loaded</string>
    <string name="search_plugins">Search Plugins</string>
    <string name="get_search_plugins">Get search plugins</string>
    <string name="delete_plugins">Delete plugins</string>
    <string name="delete_plugins_summary">Remove all the plugins installed by the user</string>
    <string name="version">Version</string>
    <string name="only_big_files">Only big files</string>
    <string name="filter_type">Only media files</string>
    <string name="sort">Sort</string>
    <string name="download_all">Download All</string>
    <string name="sort_by_az">Alphabetical</string>
    <string name="sort_by_za">Reverse alphabetical</string>
    <string name="sort_by_size_desc">Bigger first</string>
    <string name="sort_by_size_asc">Smaller first</string>
    <string name="share_all">Share all</string>
    <string name="copy_all">Copy all</string>
    <string name="download_selected">Download selected</string>
    <string name="delete_selected">Delete selected</string>
    <string name="share_selected">Share selected</string>
    <string name="select_deselect_all">Select or deselect all</string>
    <string name="delete_all_downloads">Delete all downloads</string>
    <string name="delete_all_torrents">Delete all torrents</string>
    <string name="seeders">Seeders</string>
</resources>