<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/icon_crown"
        android:title="@string/user" />
    <item
        android:id="@+id/navigation_new_download"
        android:enabled="true"
        android:icon="@drawable/icon_arrows"
        android:title="@string/new_download" />
    <item
        android:id="@+id/navigation_lists"
        android:enabled="true"
        android:icon="@drawable/icon_lists"
        android:title="@string/lists" />
    <item
        android:id="@+id/navigation_search"
        android:enabled="true"
        android:icon="@drawable/icon_search"
        android:title="@string/search" />
</menu>