<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/icon_search"
        android:title="@string/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/delete_all_downloads"
        android:contentDescription="@string/delete_all_downloads"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete_all_downloads"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_all_torrents"
        android:contentDescription="@string/delete_all_torrents"
        android:icon="@drawable/icon_delete"
        android:title="@string/delete_all_torrents"
        app:showAsAction="never" />

</menu>