<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llMultiSelection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        app:layout_constraintBottom_toTopOf="@id/srLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cbSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:nextFocusDown="@id/rvDownloadList"
            android:text="0"
            android:tooltipText="@string/select_deselect_all" />

        <Button
            android:id="@+id/bDeleteSelected"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:nextFocusDown="@id/rvDownloadList"
            android:tooltipText="@string/delete_selected"
            app:icon="@drawable/icon_delete"
            app:iconSize="25dp" />

        <Button
            android:id="@+id/bDownloadSelected"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/download"
            android:nextFocusDown="@id/rvDownloadList"
            android:tooltipText="@string/download_selected"
            app:icon="@drawable/icon_download"
            app:iconSize="25dp" />


        <Button
            android:id="@+id/bShareSelected"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share"
            android:nextFocusRight="@id/rvDownloadList"
            android:nextFocusDown="@id/rvDownloadList"
            android:tooltipText="@string/share_selected"
            app:icon="@drawable/icon_share"
            app:iconSize="25dp" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llMultiSelection">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDownloadList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_list_download" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>