<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    app:startDestination="@id/startFragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/startFragment"
        android:name="com.github.livingwithhippos.unchained.start.view.StartFragment"
        tools:layout="@layout/fragment_start"
        android:label="@string/loading">
        <action
            android:id="@+id/action_startFragment_to_authenticationFragment"
            app:destination="@id/authenticationFragment" />
        <action
            android:id="@+id/action_startFragment_to_userProfileFragment"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/authenticationFragment"
        android:name="com.github.livingwithhippos.unchained.authentication.view.AuthenticationFragment"
        tools:layout="@layout/fragment_authentication"
        android:label="@string/authenticate" >
        <action
            android:id="@+id/actionAuthenticationToUser"
            app:destination="@id/userProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/userProfileFragment"
        android:name="com.github.livingwithhippos.unchained.user.view.UserProfileFragment"
        tools:layout="@layout/fragment_user_profile"
        android:label="@string/user" >
        <argument
            android:name="token"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/newDownloadFragment"
        android:name="com.github.livingwithhippos.unchained.newdownload.view.NewDownloadFragment"
        android:label="@string/new_download"
        tools:layout="@layout/new_download_fragment" >
        <action
            android:id="@+id/actionUnrestrictDownloadToDetailsFragment"
            app:destination="@id/downloadDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/downloadDetailsFragment"
        android:name="com.github.livingwithhippos.unchained.downloaddetails.view.DownloadDetailsFragment"
        android:label="@string/download_details" >
        <argument android:name="details"
            app:argType="com.github.livingwithhippos.unchained.newdownload.model.UnrestrictedLink" />
    </fragment>
</navigation>